[package]
name = "rustly"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
	"crates/*",
]

[dependencies]
ly_log = { path = "crates/ly_log" }
ly_events = { path = "crates/ly_events" }
ly_window = { path = "crates/ly_window" }

[[example]]
name = "hello_world"

[[example]]
name = "profile_events"
