[package]
name = "ly_log"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
thread_local = "1.1.3"
crossbeam = "0.8.1"
parking_lot = "0.12.0"

[features]
default = []
strip_trace = []
strip_debug = ["strip_trace"]
strip_info = ["strip_debug"]
strip_warning = ["strip_info"]
disallow_blocking = []
