[package]
name = "ly_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.36.0", features = ["linked"] }
raw-window-handle = "0.4.2"
scopeguard = "1.1.0"

ly_log = { path = "../ly_log" }
