[package]
name = "ly_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"

ly_app = { path = "../ly_app" }
ly_events = { path = "../ly_events" }
ly_input = { path = "../ly_input" }
ly_log = { path = "../ly_log" }
